# emopt

./: .gitignore  BENCHMARK_BASELINE.md  BENCHMARK_COMPARISON_3_24.md  CHANGELOG  CHANGELOG.md  EXAMPLE_REVALIDATION_RESUME.md  EXAMPLE_RUN_REPORT.md  Makefile  README.md  TODO.md  confdefs.h  configure  configure.ac  install_emopt_develop.sh  pyproject.toml  setup-python.sh  setup-system-deps.sh  setup.py  setup.sh
.github/workflows/: test.yml
autom4te.cache/: output.0  requests  traces.0
docs/source/: installation.rst
emopt/: __init__.py  _grid_ctypes.py  adjoint_method.py  defs.py  dvio.py  fdfd.py  fdtd.py  fomutils.py  geometry.py  grid.py  io.py  misc.py  modes.py  opt_def.py
emopt/solvers/: __init__.py  _fdtd_ctypes_gpu.py  fdfd.py  fdtd_gpu.py  modes.py
examples/MMI_splitter_3D/: mmi_1x2_splitter_3D.py  mmi_1x2_splitter_3D_fdfd.py  mmi_1x2_splitter_3D_fdtd.py
examples/Silicon_Grating_Coupler/: gc_opt.py  gc_opt_constrained.py
examples/Silicon_Grating_Coupler_2L/: sg2l_opt.py
examples/experimental/MMI_splitter_3D_AutoDiff/: mmi_1x2_splitter_3D_fdtd_AutoDiffPNF3D.py
examples/experimental/blazed_grating_coupler_2D_AutoDiff/: gc_opt_2D_AutoDiffPNF2D_BlazedGrating.py
examples/experimental/fast_taper_2D_AutoDiff/: FastTaper_2D_AutoDiffPNF2D.py
examples/experimental/grating_coupler_2D_AutoDiff_FourierSeries/: gc_opt_AutoDiffPNF2D_FourierSeries.py
examples/experimental/splitter_2D_Topology/: splitter_TopologyPNF2D.py
examples/experimental/splitter_3D_Topology/: splitter_TopologyPNF3D.py
examples/klayout_import/: klayout_import.py
examples/periodic_Mie/: periodic_Mie.py
examples/simple_waveguide/: simple_waveguide.py  simple_waveguide_3D.py  simple_waveguide_mode.py  simple_waveguide_mode_3D.py  simple_waveguide_mode_TM_symmetric.py  simple_waveguide_mode_symmetric.py  simple_waveguide_symmetric_x.py  simple_waveguide_symmetric_y.py
examples/waveguide_bend/: wg_bend.py
examples/waveguide_crossing/: waveguide_crossing_TM.py
examples/waveguide_modes/: wg_modes_2D.py  wg_modes_2D_symmetry.py  wg_modes_3D.py  wg_modes_3D_sym_0E.py  wg_modes_3D_sym_0H.py  wg_modes_3D_sym_E0.py  wg_modes_3D_sym_EH.py  wg_modes_3D_sym_H0.py  wg_modes_3D_sym_HE.py
scripts/: benchmark_solver_stack.sh  install-into-active-venv.sh  run_examples_overnight.sh
src/: Grid.cpp  Makefile  Makefile.in  fdtd.cu  fdtd_gpu.hpp
tests/: test_examples_integrity.py  test_examples_smoke.py
